--- a/pages/giras.html
+++ b/pages/giras.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Giras Cacu</title>
     <link rel="stylesheet" href="../style/style.css">
+    
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
@@ -21,6 +24,11 @@
             <a href="./galery.html" onclick="esconder()">Galeria</a>
         </nav>
     </header>
+    <main class="contenedorMapa">
+        <section id="map" class="map">
+           
+        </section>
+    </main>
     <script src="../js/app.js"></script>
 </body>
 </html>
