acomodada de mayusculas

--- a/pages/giras.html
+++ b/pages/giras.html
@@ -20,7 +20,7 @@
         <nav id="myLinks">
             <a href="../index.html" onclick="esconder()">Home</a>
             <a href="./cv.html" onclick="esconder()">CV</a>
-            <a href="./contacto.html" onclick="esconder()">contacto</a>
+            <a href="./contacto.html" onclick="esconder()">Contacto</a>
             <a href="./galery.html" onclick="esconder()">Galeria</a>
         </nav>
     </header>
