--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav id="myLinks">
             <a href="./pages/cv.html" onclick="esconder()">CV</a>
             <a href="./pages/giras.html" onclick="esconder()">Giras</a>
-            <a href="./pages/contacto.html" onclick="esconder()">contacto</a>
+            <a href="./pages/contacto.html" onclick="esconder()">Contacto</a>
             <a href="./pages/galery.html" onclick="esconder()">Galeria</a>
         </nav>
     </header>
