--- a/pages/cv.html
+++ b/pages/cv.html
@@ -17,7 +17,7 @@
         <nav id="myLinks">
             <a href="../index.html" onclick="esconder()">Home</a>
             <a href="./giras.html" onclick="esconder()">Giras</a>
-            <a href="./contacto.html" onclick="esconder()">contacto</a>
+            <a href="./contacto.html" onclick="esconder()">Contacto</a>
             <a href="./galery.html" onclick="esconder()">Galeria</a>
         </nav>
     </header>
