--- a/pages/galery.html
+++ b/pages/galery.html
@@ -18,7 +18,7 @@
             <a href="../index.html" onclick="esconder()">Home</a>
             <a href="./cv.html" onclick="esconder()">CV</a>
             <a href="./giras.html" onclick="esconder()">Giras</a>
-            <a href="./contacto.html" onclick="esconder()">contacto</a>
+            <a href="./contacto.html" onclick="esconder()">Contacto</a>
         </nav>
     </header>
     <main>
