--- a/pages/cv.html
+++ b/pages/cv.html
@@ -32,7 +32,7 @@
               <div class="carousel-item">
                 <img src="../img/03.jpg" alt="Imagen 3">
               </div>
-              <div class="carousel-item active">
+              <div class="carousel-item">
                 <img src="../img/04.jpg" alt="Imagen 1">
               </div>
               <div class="carousel-item">
@@ -41,7 +41,7 @@
               <div class="carousel-item">
                 <img src="../img/06.jpg" alt="Imagen 3">
               </div>
-              <div class="carousel-item active">
+              <div class="carousel-item">
                 <img src="../img/07.jpg" alt="Imagen 1">
               </div>
               <div class="carousel-item">
@@ -55,5 +55,8 @@
             <button class="carousel-control next" onclick="nextSlide()">&#10095;</button> 
     </main>
     <script src="../js/app.js"></script>
+    <script>
+      console.log("Hola desde el script inline");
+    </script>
 </body>
 </html>
