--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cacu</title>
     <link rel="stylesheet" href="./style/style.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     
    
@@ -29,29 +30,29 @@
         </section>
         <section class="containerCards">
             <article class="card">
-                <div class="imagenCard">
+                <div class="imagenCard" data-aos="fade-right">
                     <img src="./img/01.jpg" alt="">
                 </div>
-                <div class="textoCard">
+                <div class="textoCard" data-aos="flip-down">
                     <h2>Titulo</h2>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis numquam cumque, veritatis blanditiis voluptates, hic, esse harum quia minus ipsa eius fugiat quasi quo labore. Molestias distinctio officia beatae harum.</p>
                 </div>
             </article>
             <article class="card">
-                <div class="textoCard">
+                <div class="textoCard" data-aos="flip-down">
                     <h2>Titulo</h2>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis numquam cumque, veritatis blanditiis voluptates, hic, esse harum quia minus ipsa eius fugiat quasi quo labore. Molestias distinctio officia beatae harum.</p>
 
                 </div>
-                <div class="imagenCard">
+                <div class="imagenCard" data-aos="fade-left">
                     <img src="./img/03.jpg" alt="">
                 </div>
             </article>
             <article class="card">
-                <div class="imagenCard">
+                <div class="imagenCard" data-aos="fade-right">
                     <img src="./img/06.jpg" alt="">
                 </div>
-                <div class="textoCard">
+                <div class="textoCard" data-aos="flip-down">
                     <h2>Titulo</h2>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis numquam cumque, veritatis blanditiis voluptates, hic, esse harum quia minus ipsa eius fugiat quasi quo labore. Molestias distinctio officia beatae harum.</p>
                 </div>
@@ -60,5 +61,9 @@
     </main>
 
     <script src="./js/app.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+      </script>
 </body>
 </html>
