--- a/pages/galery.html
+++ b/pages/galery.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Galery Cacu</title>
     <link rel="stylesheet" href="../style/style.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
@@ -23,29 +24,33 @@
     </header>
     <main>
         <div class="gallery">
-            <div class="gallery-item"><img src="../img/01.jpg" alt="Imagen 1"></div>
-            <div class="gallery-item"><img src="../img/02.jpg" alt="Imagen 2"></div>
-            <div class="gallery-item"><img src="../img/03.jpg" alt="Imagen 3"></div>
-            <div class="gallery-item"><img src="../img/04.jpg" alt="Imagen 4"></div>
-            <div class="gallery-item"><img src="../img/05.jpg" alt="Imagen 1"></div>
-            <div class="gallery-item"><img src="../img/06.jpg" alt="Imagen 2"></div>
-            <div class="gallery-item"><img src="../img/07.jpg" alt="Imagen 3"></div>
-            <div class="gallery-item"><img src="../img/08.jpg" alt="Imagen 4"></div>
-            <div class="gallery-item"><img src="../img/09.jpg" alt="Imagen 1"></div>
-            <div class="gallery-item"><img src="../img/10.jpg" alt="Imagen 2"></div>
-            <div class="gallery-item"><img src="../img/11.jpg" alt="Imagen 3"></div>
-            <div class="gallery-item"><img src="../img/12.jpg" alt="Imagen 4"></div>
-            <div class="gallery-item"><img src="../img/01.jpg" alt="Imagen 1"></div>
-            <div class="gallery-item"><img src="../img/03.jpg" alt="Imagen 2"></div>
-            <div class="gallery-item"><img src="../img/07.jpg" alt="Imagen 3"></div>
-            <div class="gallery-item"><img src="../img/02.jpg" alt="Imagen 4"></div>
-            <div class="gallery-item"><img src="../img/10.jpg" alt="Imagen 1"></div>
-            <div class="gallery-item"><img src="../img/12.jpg" alt="Imagen 2"></div>
-            <div class="gallery-item"><img src="../img/05.jpg" alt="Imagen 3"></div>
-            <div class="gallery-item"><img src="../img/04.jpg" alt="Imagen 4"></div>
+            <div class="gallery-item" data-aos="zoom-out"><img src="../img/01.jpg" alt="Imagen 1"></div>
+            <div class="gallery-item" data-aos="zoom-out"><img src="../img/02.jpg" alt="Imagen 2"></div>
+            <div class="gallery-item" data-aos="zoom-out"><img src="../img/03.jpg" alt="Imagen 3"></div>
+            <div class="gallery-item" data-aos="zoom-out"><img src="../img/04.jpg" alt="Imagen 4"></div>
+            <div class="gallery-item" data-aos="zoom-out"><img src="../img/05.jpg" alt="Imagen 1"></div>
+            <div class="gallery-item" data-aos="zoom-out"><img src="../img/06.jpg" alt="Imagen 2"></div>
+            <div class="gallery-item" data-aos="zoom-out"><img src="../img/07.jpg" alt="Imagen 3"></div>
+            <div class="gallery-item" data-aos="zoom-out"><img src="../img/08.jpg" alt="Imagen 4"></div>
+            <div class="gallery-item" data-aos="zoom-out"><img src="../img/09.jpg" alt="Imagen 1"></div>
+            <div class="gallery-item" data-aos="zoom-out"><img src="../img/10.jpg" alt="Imagen 2"></div>
+            <div class="gallery-item" data-aos="zoom-out"><img src="../img/11.jpg" alt="Imagen 3"></div>
+            <div class="gallery-item" data-aos="zoom-out"><img src="../img/12.jpg" alt="Imagen 4"></div>
+            <div class="gallery-item" data-aos="zoom-out"><img src="../img/01.jpg" alt="Imagen 1"></div>
+            <div class="gallery-item" data-aos="zoom-out"><img src="../img/03.jpg" alt="Imagen 2"></div>
+            <div class="gallery-item" data-aos="zoom-out"><img src="../img/07.jpg" alt="Imagen 3"></div>
+            <div class="gallery-item" data-aos="zoom-out"><img src="../img/02.jpg" alt="Imagen 4"></div>
+            <div class="gallery-item" data-aos="zoom-out"><img src="../img/10.jpg" alt="Imagen 1"></div>
+            <div class="gallery-item" data-aos="zoom-out"><img src="../img/12.jpg" alt="Imagen 2"></div>
+            <div class="gallery-item" data-aos="zoom-out"><img src="../img/05.jpg" alt="Imagen 3"></div>
+            <div class="gallery-item" data-aos="zoom-out"><img src="../img/04.jpg" alt="Imagen 4"></div>
             <!-- Más imágenes aquí -->
           </div>
     </main>
     <script src="../js/app.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+      </script>
 </body>
 </html>
