inicio casi listo

--- a/pages/cv.html
+++ b/pages/cv.html
@@ -17,6 +17,7 @@
         </a>
         <nav id="myLinks">
             <a href="../index.html" onclick="esconder()">Home</a>
+            <a href="./pages/cv.html" onclick="esconder()">CV</a>
             <a href="./giras.html" onclick="esconder()">Giras</a>
             <a href="./contacto.html" onclick="esconder()">Contacto</a>
             <a href="./galery.html" onclick="esconder()">Galeria</a>
