--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -17,9 +17,11 @@
         </a>
         <nav id="myLinks">
             <a href="../index.html" onclick="esconder()">Home</a>
-            <a href="./cv.html" onclick="esconder()">CV</a>
+            <a href="./pages/cv.html" onclick="esconder()">CV</a>
             <a href="./giras.html" onclick="esconder()">Giras</a>
+            <a href="./contacto.html" onclick="esconder()">Contacto</a>
             <a href="./galery.html" onclick="esconder()">Galeria</a>
+        </nav>
         </nav>
     </header>
     <main class="contenedorForm">
